# frankenjax

./: .gitignore  .skill-loop-progress.md  AGENTS.md  Cargo.toml  EXHAUSTIVE_LEGACY_ANALYSIS.md  EXISTING_JAX_STRUCTURE.md  FEATURE_PARITY.md  PARITY-COVERAGE.md  README.md  UPGRADE_LOG.md
.beads/: issues.jsonl
.cargo/: config.toml
benchmarks/: PERFORMANCE_COMPARISON.md
crates/fj-api/: Cargo.toml
crates/fj-api/benches/: api_overhead.rs
crates/fj-api/src/: errors.rs  lib.rs  transforms.rs
crates/fj-api/tests/: api_transform_suite.rs
crates/fj-backend-gpu/: Cargo.toml
crates/fj-backend-gpu/src/: lib.rs
crates/fj-conformance/: Cargo.toml
crates/fj-conformance/fixtures/: README.md
crates/fj-conformance/fixtures/rng/: rng_determinism.v1.json
crates/fj-conformance/fixtures/transforms/: legacy_transform_cases.v1.json
crates/fj-conformance/fuzz/: .gitignore  Cargo.toml
crates/fj-conformance/fuzz/corpus/: README.md
crates/fj-conformance/fuzz/corpus/ad_gradient_computation/: basic_gradient  seed_complex  seed_mul
crates/fj-conformance/fuzz/corpus/egraph_rewrite_rules/: basic_chain  seed_add  seed_complex  seed_mul
crates/fj-conformance/fuzz/corpus/fft_roundtrip/: basic_signal
crates/fj-conformance/fuzz/corpus/fixture_bundle_loader/: seed_valid_bundle.json
crates/fj-conformance/fuzz/corpus/fuzz_target_1/: bad_magic  corrupt_digest  length_mismatch  raw_small  truncated_header  valid_binary  valid_empty  valid_hello  valid_json  valid_ones  valid_zeros
crates/fj-conformance/fuzz/corpus/jaxpr_serde_roundtrip/: valid_add.json  valid_identity.json
crates/fj-conformance/fuzz/corpus/ledger_deserializer/: valid_entry_reprofile.json  valid_ledger_with_signals.json
crates/fj-conformance/fuzz/corpus/primitive_eval_fuzzer/: abs_i64_neg  add_f32_1d_tensors  add_f32_scalars  bool_tensor  div_f32  exp_f64_tensor  log_f64  max_i64_tensors  sin_f64  sqrt_f32
crates/fj-conformance/fuzz/corpus/proc_status_parser/: linux_status  missing_keys  whitespace_units
crates/fj-conformance/fuzz/corpus/raptorq_decoder/: binary_content  corrupt_first_byte  medium_artifact  zeros_artifact
crates/fj-conformance/fuzz/corpus/seed/cache_key_builder/: seed_hardened_clean.json  seed_strict_unknown_feature.json
crates/fj-conformance/fuzz/corpus/seed/dispatch_request_builder/: seed_hardened_dispatch.txt  seed_strict_dispatch.txt
crates/fj-conformance/fuzz/corpus/seed/fixture_bundle_loader/: seed_case_bundle.json
crates/fj-conformance/fuzz/corpus/seed/ir_deserializer/: seed_duplicate_var.json
crates/fj-conformance/fuzz/corpus/seed/transform_composition_verifier/: seed_double_grad.txt
crates/fj-conformance/fuzz/corpus/shape_inference_engine/: add_2d_f32  concat_axis0  dot_matmul  expand_dims  reduce_sum_axis0  reshape_3d_to_2d  seed_rank_stress.txt  seed_small_ascii.txt  slice_2d  squeeze_dim1  transpose_3d
crates/fj-conformance/fuzz/corpus/transform_composition_verifier/: seed_valid_stack.txt
crates/fj-conformance/fuzz/corpus/value_deserializer/: scalar_bf16.json  scalar_bool_false.json  scalar_bool_true.json  scalar_complex128.json  scalar_complex64.json  scalar_f16.json  scalar_f32.json  scalar_f64.json  scalar_i64.json  scalar_i64_neg.json  scalar_u32.json  scalar_u64.json  tensor_1d_bool.json  tensor_1d_f32.json  tensor_1d_i64.json  tensor_2d_f64.json  tensor_2d_i64.json  tensor_3d_i64.json  tensor_complex64.json  tensor_empty.json  tensor_large.json  tensor_single.json  tensor_u32.json  tensor_unit_dims.json
crates/fj-conformance/fuzz/crates/fj-conformance/fuzz/corpus/seed/raptorq_decoder/: corrupt_middle  high_repair_overhead  large_artifact  large_block_size  max_symbol_size  min_symbol_size  minimal_artifact  tiny_artifact
crates/fj-conformance/fuzz/fuzz_targets/: cache_key_builder.rs  common.rs  dispatch_request_builder.rs  fixture_bundle_loader.rs  fuzz_target_1.rs  ir_deserializer.rs  raptorq_decoder.rs  shape_inference_engine.rs  transform_composition_verifier.rs
crates/fj-conformance/scripts/: capture_legacy_fixtures.py
crates/fj-conformance/src/: durability.rs  lib.rs
crates/fj-conformance/tests/: abs_oracle.rs  acos_oracle.rs  acosh_oracle.rs  ad_numerical_verification.rs  add_sub_oracle.rs  argmin_argmax_oracle.rs  argsort_oracle.rs  array_creation_oracle.rs  artifact_schemas.rs  asin_oracle.rs  asinh_oracle.rs  atan2_oracle.rs  atan_oracle.rs  atanh_oracle.rs  backend_bridge_oracle.rs  bessel_oracle.rs  betainc_oracle.rs  bitcast_oracle.rs  bitwise_ops_oracle.rs  bitwise_oracle.rs  broadcast_in_dim_oracle.rs  broadcasted_iota_oracle.rs  cache_keying_oracle.rs  cbrt_oracle.rs  ceil_oracle.rs  clamp_oracle.rs  clz_oracle.rs  comparison_ops_oracle.rs  complex_ops_oracle.rs  complex_oracle.rs  conv_oracle.rs  convert_element_type_oracle.rs  copy_oracle.rs  copysign_oracle.rs  cosh_oracle.rs  ctz_oracle.rs  cummax_cummin_oracle.rs  cumulative_oracle.rs  deg_rad_oracle.rs  dispatch_ad_oracle.rs  (+96 more)
crates/fj-dispatch/: Cargo.toml
crates/fj-dispatch/benches/: dispatch_baseline.rs
crates/fj-dispatch/src/: batching.rs  lib.rs
crates/fj-dispatch/tests/: dispatch_p2c004_suite.rs
crates/fj-interpreters/: Cargo.toml
crates/fj-interpreters/benches/: compiled_dispatch_speed.rs  eval_chain_memory.rs  eval_fusion_speed.rs  pe_baseline.rs
crates/fj-interpreters/src/: lib.rs  partial_eval.rs  staging.rs
crates/fj-lax/: Cargo.toml
crates/fj-lax/benches/: alloc_ceiling.rs  broadcast_gauntlet.rs  complex_ctor_gauntlet.rs  elementwise_gauntlet.rs  gather_gauntlet.rs  i64_matmul_speed.rs  integer_pow_gauntlet.rs  lax_baseline.rs  rng_bits_threading.rs  rng_uniform_threading.rs  slice_gauntlet.rs  transpose_gauntlet.rs
crates/fj-lax/src/: arithmetic.rs  array_creation.rs  comparison.rs  cz0g0_f32accum_evidence.rs  dense.rs  einsum.rs  fft.rs  lib.rs  linalg.rs  nn.rs  reduction.rs  simd_exp.rs  tensor_contraction.rs  tensor_ops.rs  thread_pool.rs  threefry.rs  tree_util.rs  type_promotion.rs
crates/fj-runtime/: Cargo.toml
crates/fj-runtime/src/: backend.rs  lib.rs
docs/: NEGATIVE_EVIDENCE.md
scripts/: check_perf_regression.sh  cleanup_artifacts.sh  (+9 more)
(+1192 files in other folders)
