[workspace]
resolver = "2"
exclude = ["fuzz"]
members = [
  "crates/fj-core",
  "crates/fj-trace",
  "crates/fj-interpreters",
  "crates/fj-dispatch",
  "crates/fj-lax",
  "crates/fj-cache",
  "crates/fj-runtime",
  "crates/fj-conformance",
  "crates/fj-ledger",
  "crates/fj-ad",
  "crates/fj-egraph",
  "crates/fj-test-utils",
  "crates/fj-api",
  "crates/fj-backend-cpu",
  "crates/fj-backend-gpu",
  "crates/fj-ffi",
  "crates/fj-py",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
smallvec = { version = "1.15", features = ["serde"] }
rustc-hash = "2.1.1"
proptest = "1.9"
egg = "0.11"
half = "2.7"

# Profiling-optimized release build with debug symbols for flamegraph/samply
[profile.release-perf]
inherits = "release"
debug = "line-tables-only"
strip = false
