[package]
name = "fj-api"
description = "FrankenJAX user-facing transform API: jit, grad, vmap, value_and_grad"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
fj-ad = { path = "../fj-ad" }
fj-core = { path = "../fj-core" }
fj-dispatch = { path = "../fj-dispatch" }
fj-interpreters = { path = "../fj-interpreters" }
fj-trace = { path = "../fj-trace" }

[dev-dependencies]
fj-test-utils = { path = "../fj-test-utils" }
smallvec = { workspace = true }
proptest.workspace = true
serde_json = "1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10.9"
criterion = "0.8"

[[bench]]
name = "api_overhead"
harness = false
