[package]
name = "fj-backend-gpu"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GPU backend foundation for FrankenJAX with a V1 unavailable execution path"

[features]
default = []
# Reserved V1 feature flag; no CUDA execution dependencies are wired yet.
cuda = []
# Reserved V1 feature flag; no wgpu execution dependencies are wired yet.
wgpu = []

[dependencies]
fj-core = { path = "../fj-core" }
fj-runtime = { path = "../fj-runtime" }
fj-interpreters = { path = "../fj-interpreters" }

[dev-dependencies]
