[package]
name = "fj-conformance"
version = "0.1.0"
edition = "2024"

[dependencies]
asupersync = "0.2.5"
base64 = "0.22.1"
fj-core = { path = "../fj-core" }
fj-dispatch = { path = "../fj-dispatch" }
fj-lax = { path = "../fj-lax" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"

[dev-dependencies]
fj-ad = { path = "../fj-ad" }
fj-api = { path = "../fj-api" }
fj-backend-cpu = { path = "../fj-backend-cpu" }
fj-cache = { path = "../fj-cache" }
fj-egraph = { path = "../fj-egraph" }
fj-ffi = { path = "../fj-ffi" }
fj-interpreters = { path = "../fj-interpreters" }
fj-runtime = { path = "../fj-runtime" }
fj-test-utils = { path = "../fj-test-utils" }
jsonschema = "0.42"
smallvec = { workspace = true }
tempfile = "3.25"
