[package]
name = "fj-conformance"
version = "0.1.0"
edition = "2024"

[dependencies]
asupersync = "0.3.1"
base64 = "0.22.1"
fj-cache = { path = "../fj-cache" }
fj-core = { path = "../fj-core" }
fj-ad = { path = "../fj-ad" }
fj-dispatch = { path = "../fj-dispatch" }
fj-egraph = { path = "../fj-egraph" }
fj-interpreters = { path = "../fj-interpreters" }
fj-lax = { path = "../fj-lax" }
fj-ledger = { path = "../fj-ledger" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
smallvec = { workspace = true }

[dev-dependencies]
fj-api = { path = "../fj-api" }
fj-backend-cpu = { path = "../fj-backend-cpu" }
fj-ffi = { path = "../fj-ffi" }
fj-runtime = { path = "../fj-runtime" }
fj-test-utils = { path = "../fj-test-utils" }
insta = "1.47"
jsonschema = "0.42"
proptest.workspace = true
tempfile = "3.25"

[lints.clippy]
# Test patterns that are clearer than clippy's alternatives
cloned_ref_to_slice_refs = "allow"
useless_vec = "allow"
needless_range_loop = "allow"
