[package]
name = "fj-dispatch"
version = "0.1.0"
edition = "2024"

[dependencies]
fj-ad = { path = "../fj-ad" }
fj-cache = { path = "../fj-cache" }
fj-core = { path = "../fj-core" }
fj-interpreters = { path = "../fj-interpreters" }
fj-ledger = { path = "../fj-ledger" }

[dev-dependencies]
criterion = "0.8"
fj-test-utils = { path = "../fj-test-utils" }
smallvec = { workspace = true }

[[bench]]
name = "dispatch_baseline"
harness = false
