[package]
name = "fj-interpreters"
version = "0.1.0"
edition = "2024"

[dependencies]
fj-core = { path = "../fj-core" }
fj-lax = { path = "../fj-lax" }
rustc-hash = { workspace = true }

[dev-dependencies]
criterion = "0.5"
fj-test-utils = { path = "../fj-test-utils" }
proptest = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = { workspace = true }

[[bench]]
name = "pe_baseline"
harness = false
