[package]
name = "fj-interpreters"
version = "0.1.0"
edition = "2024"

[dependencies]
fj-core = { path = "../fj-core" }
fj-lax = { path = "../fj-lax" }
fj-trace = { path = "../fj-trace" }
rustc-hash = { workspace = true }

[dev-dependencies]
criterion = "0.8"
fj-test-utils = { path = "../fj-test-utils" }
proptest = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = { workspace = true }

[[bench]]
name = "pe_baseline"
harness = false

[[bench]]
name = "eval_chain_memory"
harness = false

[[bench]]
name = "eval_fusion_speed"
harness = false

[[bench]]
name = "compiled_dispatch_speed"
harness = false
