[package]
name = "fj-lax"
version = "0.1.0"
edition = "2024"

[dependencies]
fj-core = { path = "../fj-core" }

[dev-dependencies]
fj-test-utils = { path = "../fj-test-utils" }
proptest = { workspace = true }
criterion = "0.8"

[[bench]]
name = "lax_baseline"
harness = false

[[bench]]
name = "i64_matmul_speed"
harness = false

[[bench]]
name = "u64_matmul_speed"
harness = false

[[bench]]
name = "rng_uniform_threading"
harness = false

[[bench]]
name = "rng_dist_transform_threading"
harness = false

[[bench]]
name = "rng_bits_threading"
harness = false
