[package]
name = "fj-lax"
version = "0.1.0"
edition = "2024"

[dependencies]
fj-core = { path = "../fj-core" }
mimalloc = { version = "0.1", optional = true, default-features = false }

[features]
# Opt-in caching global allocator for the alloc_ceiling bench only (so4wo probe).
mimalloc-alloc = ["dep:mimalloc"]

[dev-dependencies]
fj-test-utils = { path = "../fj-test-utils" }
proptest = { workspace = true }
criterion = "0.8"

[[bench]]
name = "lax_baseline"
harness = false

[[bench]]
name = "i64_matmul_speed"
harness = false

[[bench]]
name = "u64_matmul_speed"
harness = false

[[bench]]
name = "rng_uniform_threading"
harness = false

[[bench]]
name = "rng_dist_transform_threading"
harness = false

[[bench]]
name = "rng_bits_threading"
harness = false

[[bench]]
name = "clamp_gauntlet"
harness = false

[[bench]]
name = "transpose_gauntlet"
harness = false

[[bench]]
name = "broadcast_gauntlet"
harness = false

[[bench]]
name = "integer_pow_gauntlet"
harness = false

[[bench]]
name = "slice_gauntlet"
harness = false

[[bench]]
name = "gather_gauntlet"
harness = false

[[bench]]
name = "complex_ctor_gauntlet"
harness = false

[[bench]]
name = "elementwise_gauntlet"
harness = false

[[bench]]
name = "alloc_ceiling"
harness = false
