[package]
name = "fj-runtime"
version = "0.1.0"
edition = "2024"

[features]
default = []
asupersync-integration = ["dep:asupersync"]
frankentui-integration = ["dep:ftui"]

[dependencies]
fj-core = { path = "../fj-core" }
fj-ledger = { path = "../fj-ledger" }
asupersync = { version = "0.3.4", default-features = false, optional = true }
ftui = { version = "0.2.1", default-features = false, optional = true }

[dev-dependencies]
fj-test-utils = { path = "../fj-test-utils" }
insta = "1.47.2"
proptest = { workspace = true }
